--- a/Ввод и вывод данных.md
+++ b/Ввод и вывод данных.md
@@ -19,3 +19,9 @@ print()
 ```python
 input()
 ```
+> К тому же `input()` считывает строку текста, значит в переменную будет записана строка, что бы не передал пользователь
+- Также можно передать аргумент в виде строки
+	```python
+	input('Как дела?')
+	```
+	В таком случае сначала на вывод поступит строка, а потом будет ожидание ввода от пользователя
