--- a/Общая инфо.md
+++ b/Общая инфо.md
@@ -1,3 +1,7 @@
+**Язык программирования** - набор определенных правил, по которым компьютер может понимать команды (инструкции) и выполнять их.
+Такие программы на любом `ЯП` называются программным кодом.
+`ЯП` бывают компилируемые и интерпретируемые [подробнее](./Интерпретатор%20и%20компилятор.md)
+
 **Python**:
  - Интерпретируемый (код интерпретируется построчно в момент обращения программой-интерпретатором без предварительной компиляции)
  - Высокоуровневый (команды больше похожи на естественный язык, чем на машинный)
