--- a/Переменные.md
+++ b/Переменные.md
@@ -14,12 +14,12 @@
 
 Применяется два типа наименования переменных: `camel case` и `underscore notation` (`snake case`)
 
-`Camel case` подразумевает, что каждое новое подслово в наименовании переменной начинается с большой буквы. Например:
+`Mixed case` подразумевает, что каждое новое подслово в наименовании переменной начинается с большой буквы. Например:
 ```python
 userName = 'Tom'
 ```
 
-`Pascal case` подразумевает, что все слова начинаются с большой буквы. Например:
+`Camel case` подразумевает, что все слова начинаются с большой буквы. Например:
 ```python
 UserName = 'Tom'
 ```
@@ -45,6 +45,7 @@ numbers2 = numbers
 name = "Trey"
 ```
 Состояние переменных и объектов будет выглядеть так:
+
 ![](./attach/Pasted%20image%2020240525230215.png)
 
 ### Два типа `изменения` в Python
@@ -65,6 +66,7 @@ matrix = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]
 row = matrix[1]
 ```
 Состояние переменных и объектов будет выглядеть так:
+
 ![](./attach/Pasted%20image%2020240525230111.png)
 
 Поэтому, если мы изменим список, на который указывает `row`, мы увидим изменение в обоих местах
@@ -133,6 +135,7 @@ matrix[0] is new_matrix[0]
 ```
 
 Состояние переменных и объектов будет выглядеть так:
+
 ![](./attach/Pasted%20image%2020240526001313.png)
 
 Пример иммутабельности и мутабельности:
@@ -191,6 +194,10 @@ processed_data = [
 
 
 ## Работа с переменными
+Также можно присвоить к нескольким переменным значение за 1 инструкцию 
+```python
+v1, v2 = 1, 2
+```
 
 Встроенная функция для хранения всех переменных внутри программы:
 ```python
